# multi-agent-system-using-langgraph

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: demo_client.py
src/agents/: __init__.py  prompt_analyzer.py  research_agent.py  state.py  tools.py  workflow.py  writing_agent.py
src/api/: main.py  schemas.py  websocket.py
src/api/routes/: tasks.py
src/database/: __init__.py  connection.py  crud.py  models.py
src/shared/: llm_provider.py  logger.py  redis_client.py
src/worker/: celery_app.py
tests/: conftest.py  test_api.py  test_database.py  test_e2e.py  test_workflow.py
