[project]
name = "multi-agent-system-langgraph"
version = "0.1.0"
description = "A multi-agent system built with LangGraph, FastAPI, and Celery for orchestrating AI agents"
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "AkhileshMalthi" }]
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "celery-types>=0.24.0",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.0.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "asyncpg>=0.31.0",
    "ruff>=0.8.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
]
